<resources>
    <string name="app_name">Aula</string>
    <string name="imagenboton">Informacion</string>
    <string name="usuario">Usuario</string>
    <string name="admin">Administrador</string>
    <string name="profesor">Academico</string>
    <string name="hora">Horario</string>
    <string name="salon">Salon</string>
    <string name="materia">Materia</string>
    <string name="sesion">sesion</string>
    <string name="editar">Editar</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
</resources>