<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones_Administrador">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logouv" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="88dp"
        android:layout_height="85dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#03A9F4"
        android:contentDescription="@string/agregar"
        android:onClick="menuAdministradorAgregar"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/document_add_114467" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#2196F3"
        android:contentDescription="@string/editar"
        android:onClick="menuAdministradorEditar"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/editar" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="84dp"
        android:layout_height="83dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#2196F3"
        android:contentDescription="@string/eliminar"
        android:onClick="menuAdministradorEliminar"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/_2officeicons_3_89720" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:text="Agregar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Eliminar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="84dp"
        android:text="Editar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton12" />
</androidx.constraintlayout.widget.ConstraintLayout>